--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ h3 {
     background-color: rgb(0, 0, 0);
     border: 2px solid #66ff66;
     color: #66ff66;
+    transition: 200ms;
 }
 
 .login-btns button:active {
